// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RewardCard /> by default matches with snapshot 1`] = `
<div
  data-radium={true}
  style={
    Object {
      "borderColor": "#eee",
      "borderStyle": "solid",
      "borderWidth": 2,
    }
  }
>
  <div
    style={
      Object {
        "marginBottom": "2.5rem",
        "marginTop": "2.5rem",
      }
    }
  >
    <div
      className="rmq-ac5e1496 rmq-5b3da7a1 rmq-ce79a9e0 k-Grid"
      data-radium={true}
      style={
        Object {
          "paddingLeft": 20,
          "paddingRight": 20,
        }
      }
    >
      <div
        className="k-Grid__col--12 k-Grid__col--7@s k-Grid__col--10@l"
        data-radium={true}
      >
        <div
          data-radium={true}
          disabled={false}
          style={Object {}}
        >
          <div
            style={
              Object {
                "marginBottom": "1.25rem",
                "marginTop": null,
              }
            }
          >
            <h1
              className="k-Title k-Title--tertiary k-Title--withoutMargin k-Title--italic"
              style={
                Object {
                  "color": "#222",
                }
              }
            >
              Custom title mount
            </h1>
          </div>
          <div
            style={
              Object {
                "marginBottom": "1.875rem",
                "marginTop": "1.25rem",
              }
            }
          >
            <span
              className="k-HorizontalStroke k-HorizontalStroke--big"
            />
          </div>
          
          <div
            style={
              Object {
                "marginBottom": null,
                "marginTop": "1.875rem",
              }
            }
          >
            <p
              className="k-Paragraph k-Paragraph--tertiary k-Paragraph--withoutMargin"
              style={
                Object {
                  "color": "#222",
                }
              }
            >
              Custom text description
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "@media (min-width: 640px){ .rmq-ac5e1496{padding-left: 30px !important;
padding-right: 30px !important;}}
@media (min-width: 768px){ .rmq-5b3da7a1{padding-left: 40px !important;
padding-right: 0 !important;}}
@media (min-width: 1080px){ .rmq-ce79a9e0{padding-left: 115px !important;
padding-right: 0 !important;}}",
      }
    }
  />
</div>
`;

exports[`<RewardCard /> on tiny version matches with snapshot 1`] = `
<div
  data-radium={true}
  infos={
    Array [
      Object {
        "label": "Delivery",
        "value": "03/18",
      },
      Object {
        "label": "Alice",
        "value": "Wonderland",
      },
    ]
  }
  style={
    Object {
      "borderColor": "#eee",
      "borderStyle": "solid",
      "borderWidth": 2,
    }
  }
  tiny={true}
>
  <div
    style={
      Object {
        "marginBottom": "2.5rem",
        "marginTop": "2.5rem",
      }
    }
  >
    <div
      className="rmq-ac5e1496 rmq-5b3da7a1 rmq-ce79a9e0 k-Grid"
      data-radium={true}
      style={
        Object {
          "paddingLeft": 20,
          "paddingRight": 20,
        }
      }
    >
      <div
        className="k-Grid__col--12 k-Grid__col--7@s k-Grid__col--7@l"
        data-radium={true}
      >
        <div
          data-radium={true}
          disabled={false}
          style={Object {}}
        >
          <div
            style={
              Object {
                "marginBottom": "1.25rem",
                "marginTop": null,
              }
            }
          >
            <span
              className="k-Button k-Button--lithium k-Button--tiny k-Button--icon is-readonly k-Button--icon--tiny"
              style={
                Object {
                  "borderRadius": 5,
                }
              }
              tabIndex={null}
            >
              <svg
                className="k-Button__icon is-readonly"
                height="16"
                viewBox="0 0 18 16"
                width="18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title>
                  Star
                </title>
                <path
                  d="M8.999 0l1.93 5.974c.028.09.112.15.206.15l6.274-.013-5.084 3.68a.216.216 0 0 0-.079.242L14.198 16l-5.072-3.7a.216.216 0 0 0-.255 0L3.801 16l1.953-5.967a.216.216 0 0 0-.079-.243L.591 6.111l6.274.012c.094 0 .178-.06.207-.15L8.999 0z"
                />
              </svg>
              Youpi
            </span>
          </div>
          <div
            style={
              Object {
                "marginBottom": "1.25rem",
                "marginTop": "1.25rem",
              }
            }
          >
            <h4
              className="k-Title k-Title--tertiary k-Title--withoutMargin k-Title--italic"
              style={
                Object {
                  "color": "#222",
                }
              }
            >
              Custom title amount
            </h4>
          </div>
          <div
            style={
              Object {
                "marginBottom": "1.875rem",
                "marginTop": "1.25rem",
              }
            }
          >
            <span
              className="k-HorizontalStroke k-HorizontalStroke--big"
            />
          </div>
          <div
            style={
              Object {
                "marginBottom": "0.625rem",
                "marginTop": "1.875rem",
              }
            }
          >
            <quote
              className="k-u-color-font1 k-u-size-huge k-u-weight-bold"
              style={
                Object {
                  "margin": 0,
                }
              }
            >
              Custom title description
            </quote>
          </div>
          <div
            style={
              Object {
                "marginBottom": null,
                "marginTop": "0.625rem",
              }
            }
          >
            <p
              className="k-Paragraph k-Paragraph--tertiary k-Paragraph--withoutMargin"
              style={
                Object {
                  "color": "#222",
                }
              }
            >
              Custom text description
            </p>
          </div>
        </div>
        <div
          data-radium={true}
          disabled={false}
          style={Object {}}
        >
          <div
            style={
              Object {
                "marginBottom": "1.875rem",
                "marginTop": "1.25rem",
              }
            }
          >
            <span
              className="rmq-ef57b76a k-u-color-font1 k-u-weight-regular"
              data-radium={true}
              style={
                Object {
                  "fontSize": 14,
                }
              }
            >
              Delivery 
              <span
                className="k-u-color-font1 k-u-weight-light"
              >
                03/18
              </span>
            </span>
            <span
              className="rmq-ef57b76a k-u-color-font1 k-u-weight-regular"
              data-radium={true}
              style={
                Object {
                  "fontSize": 14,
                }
              }
            >
              Alice 
              <span
                className="k-u-color-font1 k-u-weight-light"
              >
                Wonderland
              </span>
            </span>
          </div>
        </div>
        <div
          style={
            Object {
              "marginBottom": null,
              "marginTop": "1.875rem",
            }
          }
        >
          <button
            aria-labelledby="Custom text button"
            className="rmq-b016fca7 k-Button k-Button--helium k-Button--big"
            data-radium={true}
            disabled={false}
            onClick={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={Object {}}
            tabIndex={null}
            type="button"
          >
            Custom text button
          </button>
          <div
            style={
              Object {
                "marginBottom": null,
                "marginTop": "1.25rem",
              }
            }
          >
            <div
              data-radium={true}
              style={
                Object {
                  "alignItems": "center",
                  "display": "flex",
                }
              }
            >
              <div
                data-radium={true}
              >
                <span
                  data-radium={true}
                  style={
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#61d079",
                      "borderRadius": 30,
                      "display": "flex",
                      "justifyContent": "center",
                      "marginRight": 10,
                      "minHeight": 30,
                      "minWidth": 30,
                      "padding": 0,
                    }
                  }
                >
                  <span
                    data-radium={true}
                    style={
                      Object {
                        "color": "#fff",
                        "fill": "#fff",
                        "flexBasis": 11,
                        "fontSize": 12,
                        "fontWeight": "bold",
                        "lineHeight": 0,
                        "textAlign": "center",
                      }
                    }
                  >
                    <svg
                      className="k-IconBadge__svg"
                      viewBox="0 0 11 8"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <title>
                        Checked
                      </title>
                      <path
                        d="M4.44 7.596L3.024 6.182 8.682.525l1.414 1.414z"
                      />
                      <path
                        d="M4.44 7.596L.903 4.06l1.414-1.414 3.536 3.536z"
                      />
                    </svg>
                  </span>
                </span>
                <style
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "",
                    }
                  }
                />
              </div>
              <div
                data-radium={true}
                style={
                  Object {
                    "display": "flex",
                    "lineHeight": "normal",
                  }
                }
              >
                <span
                  className="k-u-color-font1 k-u-size-tiny k-u-weight-regular"
                >
                  Custom my contribution
                  <br />
                  <a
                    className="k-u-color-primary1 k-u-decoration-none k-u-weight-regular"
                    href="Custom manage link contribution"
                  >
                    Custom manage contribution
                  </a>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="rmq-c7c1445b k-Grid__col--12 k-Grid__col--4@s k-Grid__col--offset-1@s"
        data-radium={true}
        style={Object {}}
      >
        <div
          style={
            Object {
              "marginBottom": "1.25rem",
              "marginTop": null,
            }
          }
        >
          <div
            data-radium={true}
            disabled={false}
            style={Object {}}
          >
            <img
              alt="Image alt"
              data-radium={true}
              src="#image"
              style={
                Object {
                  "display": "block",
                  "width": "100%",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "@media (min-width: 640px){ .rmq-ac5e1496{padding-left: 30px !important;
padding-right: 30px !important;}}
@media (min-width: 768px){ .rmq-5b3da7a1{padding-left: 40px !important;
padding-right: 0 !important;}}
@media (min-width: 1080px){ .rmq-ce79a9e0{padding-left: 115px !important;
padding-right: 0 !important;}}
@media (min-width: 768px){ .rmq-ef57b76a{font-size: 16px !important;
margin-right: 30px !important;}}
@media (max-width: 767px){ .rmq-b016fca7{width: calc(100% + 4px) !important;
position: relative !important;
left: -2px !important;
bottom: -2px !important;}}
@media (min-width: 768px){ .rmq-c7c1445b{padding-right: 50px !important;}}",
      }
    }
  />
</div>
`;

exports[`<RewardCard /> with all props matches with snapshot 1`] = `
<div
  data-radium={true}
  infos={
    Array [
      Object {
        "label": "Delivery",
        "value": "03/18",
      },
      Object {
        "label": "Alice",
        "value": "Wonderland",
      },
    ]
  }
  style={
    Object {
      "borderColor": "#eee",
      "borderStyle": "solid",
      "borderWidth": 2,
    }
  }
>
  <div
    style={
      Object {
        "marginBottom": "2.5rem",
        "marginTop": "2.5rem",
      }
    }
  >
    <div
      className="rmq-ac5e1496 rmq-5b3da7a1 rmq-ce79a9e0 k-Grid"
      data-radium={true}
      style={
        Object {
          "paddingLeft": 20,
          "paddingRight": 20,
        }
      }
    >
      <div
        className="k-Grid__col--12 k-Grid__col--7@s k-Grid__col--7@l"
        data-radium={true}
      >
        <div
          data-radium={true}
          disabled={false}
          style={Object {}}
        >
          <div
            style={
              Object {
                "marginBottom": "1.25rem",
                "marginTop": null,
              }
            }
          >
            <span
              className="k-Button k-Button--lithium k-Button--tiny k-Button--icon is-readonly k-Button--icon--tiny"
              style={
                Object {
                  "borderRadius": 5,
                }
              }
              tabIndex={null}
            >
              <svg
                className="k-Button__icon is-readonly"
                height="16"
                viewBox="0 0 18 16"
                width="18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title>
                  Star
                </title>
                <path
                  d="M8.999 0l1.93 5.974c.028.09.112.15.206.15l6.274-.013-5.084 3.68a.216.216 0 0 0-.079.242L14.198 16l-5.072-3.7a.216.216 0 0 0-.255 0L3.801 16l1.953-5.967a.216.216 0 0 0-.079-.243L.591 6.111l6.274.012c.094 0 .178-.06.207-.15L8.999 0z"
                />
              </svg>
              Youpi
            </span>
          </div>
          <div
            style={
              Object {
                "marginBottom": "1.25rem",
                "marginTop": "1.25rem",
              }
            }
          >
            <h4
              className="k-Title k-Title--tertiary k-Title--withoutMargin k-Title--italic"
              style={
                Object {
                  "color": "#222",
                }
              }
            >
              Custom title amount
            </h4>
          </div>
          <div
            style={
              Object {
                "marginBottom": "1.875rem",
                "marginTop": "1.25rem",
              }
            }
          >
            <span
              className="k-HorizontalStroke k-HorizontalStroke--big"
            />
          </div>
          <div
            style={
              Object {
                "marginBottom": "0.625rem",
                "marginTop": "1.875rem",
              }
            }
          >
            <quote
              className="k-u-color-font1 k-u-size-huge k-u-weight-bold"
              style={
                Object {
                  "margin": 0,
                }
              }
            >
              Custom title description
            </quote>
          </div>
          <div
            style={
              Object {
                "marginBottom": null,
                "marginTop": "0.625rem",
              }
            }
          >
            <p
              className="k-Paragraph k-Paragraph--tertiary k-Paragraph--withoutMargin"
              style={
                Object {
                  "color": "#222",
                }
              }
            >
              Custom text description
            </p>
          </div>
        </div>
        <div
          data-radium={true}
          disabled={false}
          style={Object {}}
        >
          <div
            style={
              Object {
                "marginBottom": "1.875rem",
                "marginTop": "1.25rem",
              }
            }
          >
            <span
              className="rmq-ef57b76a k-u-color-font1 k-u-weight-regular"
              data-radium={true}
              style={
                Object {
                  "fontSize": 14,
                }
              }
            >
              Delivery 
              <span
                className="k-u-color-font1 k-u-weight-light"
              >
                03/18
              </span>
            </span>
            <span
              className="rmq-ef57b76a k-u-color-font1 k-u-weight-regular"
              data-radium={true}
              style={
                Object {
                  "fontSize": 14,
                }
              }
            >
              Alice 
              <span
                className="k-u-color-font1 k-u-weight-light"
              >
                Wonderland
              </span>
            </span>
          </div>
        </div>
        <div
          style={
            Object {
              "marginBottom": null,
              "marginTop": "1.875rem",
            }
          }
        >
          <button
            aria-labelledby="Custom text button"
            className="rmq-b016fca7 k-Button k-Button--helium k-Button--big"
            data-radium={true}
            disabled={false}
            onClick={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={Object {}}
            tabIndex={null}
            type="button"
          >
            Custom text button
          </button>
          <div
            style={
              Object {
                "marginBottom": null,
                "marginTop": "1.25rem",
              }
            }
          >
            <div
              data-radium={true}
              style={
                Object {
                  "alignItems": "center",
                  "display": "flex",
                }
              }
            >
              <div
                data-radium={true}
              >
                <span
                  data-radium={true}
                  style={
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#61d079",
                      "borderRadius": 30,
                      "display": "flex",
                      "justifyContent": "center",
                      "marginRight": 10,
                      "minHeight": 30,
                      "minWidth": 30,
                      "padding": 0,
                    }
                  }
                >
                  <span
                    data-radium={true}
                    style={
                      Object {
                        "color": "#fff",
                        "fill": "#fff",
                        "flexBasis": 11,
                        "fontSize": 12,
                        "fontWeight": "bold",
                        "lineHeight": 0,
                        "textAlign": "center",
                      }
                    }
                  >
                    <svg
                      className="k-IconBadge__svg"
                      viewBox="0 0 11 8"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <title>
                        Checked
                      </title>
                      <path
                        d="M4.44 7.596L3.024 6.182 8.682.525l1.414 1.414z"
                      />
                      <path
                        d="M4.44 7.596L.903 4.06l1.414-1.414 3.536 3.536z"
                      />
                    </svg>
                  </span>
                </span>
                <style
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "",
                    }
                  }
                />
              </div>
              <div
                data-radium={true}
                style={
                  Object {
                    "display": "flex",
                    "lineHeight": "normal",
                  }
                }
              >
                <span
                  className="k-u-color-font1 k-u-size-tiny k-u-weight-regular"
                >
                  Custom my contribution
                  <br />
                  <a
                    className="k-u-color-primary1 k-u-decoration-none k-u-weight-regular"
                    href="Custom manage link contribution"
                  >
                    Custom manage contribution
                  </a>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="rmq-c7c1445b k-Grid__col--12 k-Grid__col--4@s k-Grid__col--offset-1@s"
        data-radium={true}
        style={Object {}}
      >
        <div
          style={
            Object {
              "marginBottom": "1.25rem",
              "marginTop": null,
            }
          }
        >
          <div
            data-radium={true}
            disabled={false}
            style={Object {}}
          >
            <img
              alt="Image alt"
              data-radium={true}
              src="#image"
              style={
                Object {
                  "display": "block",
                  "width": "100%",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "@media (min-width: 640px){ .rmq-ac5e1496{padding-left: 30px !important;
padding-right: 30px !important;}}
@media (min-width: 768px){ .rmq-5b3da7a1{padding-left: 40px !important;
padding-right: 0 !important;}}
@media (min-width: 1080px){ .rmq-ce79a9e0{padding-left: 115px !important;
padding-right: 0 !important;}}
@media (min-width: 768px){ .rmq-ef57b76a{font-size: 16px !important;
margin-right: 30px !important;}}
@media (max-width: 767px){ .rmq-b016fca7{width: calc(100% + 4px) !important;
position: relative !important;
left: -2px !important;
bottom: -2px !important;}}
@media (min-width: 768px){ .rmq-c7c1445b{padding-right: 50px !important;}}",
      }
    }
  />
</div>
`;

exports[`<RewardCard /> with legacy props matches with snapshot 1`] = `
<div
  data-radium={true}
  style={
    Object {
      "borderColor": "#eee",
      "borderStyle": "solid",
      "borderWidth": 2,
    }
  }
>
  <div
    style={
      Object {
        "marginBottom": "2.5rem",
        "marginTop": "2.5rem",
      }
    }
  >
    <div
      className="rmq-ac5e1496 rmq-5b3da7a1 rmq-ce79a9e0 k-Grid"
      data-radium={true}
      style={
        Object {
          "paddingLeft": 20,
          "paddingRight": 20,
        }
      }
    >
      <div
        className="k-Grid__col--12 k-Grid__col--7@s k-Grid__col--7@l"
        data-radium={true}
      >
        <div
          data-radium={true}
          disabled={false}
          style={Object {}}
        >
          <div
            style={
              Object {
                "marginBottom": "1.25rem",
                "marginTop": null,
              }
            }
          >
            <h1
              className="k-Title k-Title--tertiary k-Title--withoutMargin k-Title--italic"
              style={
                Object {
                  "color": "#222",
                }
              }
            >
              Custom title amount
            </h1>
          </div>
          <div
            style={
              Object {
                "marginBottom": "1.875rem",
                "marginTop": "1.25rem",
              }
            }
          >
            <span
              className="k-HorizontalStroke k-HorizontalStroke--big"
            />
          </div>
          <div
            style={
              Object {
                "marginBottom": "0.625rem",
                "marginTop": "1.875rem",
              }
            }
          >
            <p
              className="k-u-color-font1 k-u-size-huge k-u-weight-bold"
              style={
                Object {
                  "margin": 0,
                }
              }
            >
              Custom title description
            </p>
          </div>
          <div
            style={
              Object {
                "marginBottom": null,
                "marginTop": "0.625rem",
              }
            }
          >
            <p
              className="k-Paragraph k-Paragraph--tertiary k-Paragraph--withoutMargin"
              style={
                Object {
                  "color": "#222",
                }
              }
            >
              Custom text description
            </p>
          </div>
        </div>
        <div
          data-radium={true}
          disabled={false}
          style={Object {}}
        >
          <div
            style={
              Object {
                "marginBottom": "1.875rem",
                "marginTop": "1.25rem",
              }
            }
          >
            <span
              className="rmq-ef57b76a k-u-color-font1 k-u-weight-regular"
              data-radium={true}
              style={
                Object {
                  "fontSize": 14,
                }
              }
            >
              Custom title contributors 
              <span
                className="k-u-color-font1 k-u-weight-light"
              >
                Custom value contributors
              </span>
            </span>
            <span
              className="rmq-ef57b76a k-u-color-font1 k-u-weight-regular"
              data-radium={true}
              style={
                Object {
                  "fontSize": 14,
                }
              }
            >
              Custom title delivery 
              <span
                className="k-u-color-font1 k-u-weight-light"
              >
                Custom value delivery
              </span>
            </span>
            <span
              className="rmq-ef57b76a k-u-color-font1 k-u-weight-regular"
              data-radium={true}
              style={
                Object {
                  "fontSize": 14,
                }
              }
            >
              Custom title availability 
              <span
                className="k-u-color-font1 k-u-weight-light"
              >
                Custom value availability
              </span>
            </span>
          </div>
        </div>
        <div
          style={
            Object {
              "marginBottom": null,
              "marginTop": "1.875rem",
            }
          }
        >
          <button
            aria-labelledby="Custom text button"
            className="rmq-b016fca7 k-Button k-Button--helium k-Button--big"
            data-radium={true}
            disabled={false}
            onClick={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={Object {}}
            tabIndex={null}
            type="button"
          >
            Custom text button
          </button>
          <div
            style={
              Object {
                "marginBottom": null,
                "marginTop": "1.25rem",
              }
            }
          >
            <div
              data-radium={true}
              style={
                Object {
                  "alignItems": "center",
                  "display": "flex",
                }
              }
            >
              <div
                data-radium={true}
              >
                <span
                  data-radium={true}
                  style={
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#61d079",
                      "borderRadius": 30,
                      "display": "flex",
                      "justifyContent": "center",
                      "marginRight": 10,
                      "minHeight": 30,
                      "minWidth": 30,
                      "padding": 0,
                    }
                  }
                >
                  <span
                    data-radium={true}
                    style={
                      Object {
                        "color": "#fff",
                        "fill": "#fff",
                        "flexBasis": 11,
                        "fontSize": 12,
                        "fontWeight": "bold",
                        "lineHeight": 0,
                        "textAlign": "center",
                      }
                    }
                  >
                    <svg
                      className="k-IconBadge__svg"
                      viewBox="0 0 11 8"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <title>
                        Checked
                      </title>
                      <path
                        d="M4.44 7.596L3.024 6.182 8.682.525l1.414 1.414z"
                      />
                      <path
                        d="M4.44 7.596L.903 4.06l1.414-1.414 3.536 3.536z"
                      />
                    </svg>
                  </span>
                </span>
                <style
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "",
                    }
                  }
                />
              </div>
              <div
                data-radium={true}
                style={
                  Object {
                    "display": "flex",
                    "lineHeight": "normal",
                  }
                }
              >
                <span
                  className="k-u-color-font1 k-u-size-tiny k-u-weight-regular"
                >
                  Custom my contribution
                  <br />
                  <a
                    className="k-u-color-primary1 k-u-decoration-none k-u-weight-regular"
                    href="Custom manage link contribution"
                  >
                    Custom manage contribution
                  </a>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="rmq-c7c1445b k-Grid__col--12 k-Grid__col--4@s k-Grid__col--offset-1@s"
        data-radium={true}
        style={Object {}}
      >
        <div
          style={
            Object {
              "marginBottom": null,
              "marginTop": null,
            }
          }
        >
          <div
            data-radium={true}
            disabled={false}
            style={Object {}}
          >
            <img
              alt="Image alt"
              data-radium={true}
              src="#image"
              style={
                Object {
                  "display": "block",
                  "width": "100%",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "@media (min-width: 640px){ .rmq-ac5e1496{padding-left: 30px !important;
padding-right: 30px !important;}}
@media (min-width: 768px){ .rmq-5b3da7a1{padding-left: 40px !important;
padding-right: 0 !important;}}
@media (min-width: 1080px){ .rmq-ce79a9e0{padding-left: 115px !important;
padding-right: 0 !important;}}
@media (min-width: 768px){ .rmq-ef57b76a{font-size: 16px !important;
margin-right: 30px !important;}}
@media (max-width: 767px){ .rmq-b016fca7{width: calc(100% + 4px) !important;
position: relative !important;
left: -2px !important;
bottom: -2px !important;}}
@media (min-width: 768px){ .rmq-c7c1445b{padding-right: 50px !important;}}",
      }
    }
  />
</div>
`;
